tests/snapshots/test_runner__tests__compiler__typecheck__monadic_let_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let colorIsRed = \_ =>
  let x = 1
    else \_ => 'hi'
  x

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/monadic_let_1.kk:3:16
  │
3 │     else \_ => 'hi'
  │                ^^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Number      | + String    |
    +---------------+-------------+
